Remove tags from typescript backend
